--- a/package.json
+++ b/package.json
@@ -7,8 +7,19 @@
   "author": "Charlie Gleason",
   "license": "ISC",
   "devDependencies": {
+    "browser-sync": "^1.3.5",
+    "browserify": "^6.2.0",
     "gulp": "^3.8.5",
+    "gulp-plumber": "^0.6.6",
+    "gulp-stylus": "^1.3.4",
+    "gulp-util": "^3.0.1",
     "harp": "^0.13.0",
-    "browser-sync": "^1.3.5"
+    "nib": "^1.0.4",
+    "underscore": "^1.7.0",
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^2.1.1"
+  },
+  "dependencies": {
+    "jquery": "^2.1.1"
   }
 }
