--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "browser-sync": "^1.3.5",
     "browserify": "^6.2.0",
+    "debowerify": "^0.9.1",
     "gulp": "^3.8.5",
     "gulp-plumber": "^0.6.6",
     "gulp-stylus": "^1.3.4",
@@ -20,6 +21,7 @@
     "watchify": "^2.1.1"
   },
   "dependencies": {
-    "jquery": "^2.1.1"
+    "jquery": "^2.1.1",
+    "sticky-header": "git://github.com/seethruhead/sticky-header"
   }
 }
