--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "browserify": "^6.2.0",
     "debowerify": "^0.9.1",
     "gulp": "^3.8.5",
+    "gulp-image-resize": "^0.5.0",
+    "gulp-imagemin": "^1.2.1",
     "gulp-plumber": "^0.6.6",
     "gulp-stylus": "^1.3.4",
     "gulp-util": "^3.0.1",
     "harp": "^0.13.0",
+    "imagemin-pngcrush": "^4.0.0",
     "nib": "^1.0.4",
     "underscore": "^1.7.0",
     "vinyl-source-stream": "^1.0.0",
